# Rust-projects

./: .env  .gitignore
.github/workflows/: build-identity-server.yml
foundation/: Cargo.toml  config.json
foundation/oci-bindings/: Cargo.toml  build.rs
foundation/oracle/: build.rs
foundation/oracle/src/: connection.rs  lib.rs  statement.rs  types.rs  values.rs
foundation/oracle/src/oci/: bindings.rs
foundation/oracle_derive/: Cargo.toml
foundation/oracle_derive/src/: lib.rs
foundation/oracle_derive/src/internals/: ast.rs  mod.rs
foundation/src/: main.rs
identity-server-rs/: .space.kts  Cargo.toml  personal-access-token.txt
identity-server-rs/docker/: Dockerfile
identity-server-rs/src/: config.rs  errors.rs  handlers.rs  main.rs
identity-server-rs/src/database/: mod.rs
identity-server-rs/src/identity/: auth_token.rs  service.rs
migration/: Cargo.toml  build.rs  install-oracle.MD  wrapper.h
migration/config/acc/: config-content.json  config.json
migration/config/doc/: config-content.json  config.json
migration/src/: accessories.rs  config.rs  executor.rs  foreign_keys.rs  grants.rs  indexes.rs  logger.rs  main.rs  schemas.rs  sequences.rs  snapshots.rs  table.rs  table_executor.rs  table_loader.rs  triggers.rs
migration/src/oracle/: bindings.rs  conn.rs  env.rs  lob.rs  meta.rs  mod.rs  oci-bindings.rs  oci.rs  primitives.rs  query.rs  stmt.rs  temporals.rs  typed_query.rs
migration/src/oracle/oci/: api.rs  common.rs  errors.rs  ffi.rs  mod.rs
oracle-import/: Cargo.toml  conf.ini
oracle-import/src/: import_tables.rs  list_files.rs  main.rs  options.rs
